--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,13 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+    <form action=""> 
+      <input type="email" name="email" class="input">
+      <input type="text" name="name" class="input">
+      <input type="text" name="adress" class="input">
+      <input type="tel" name="phone" class="input">
+      <input type="color" name="color" class="input">
+      <input type="date" name="delivery_date" class="input">
+    </form>
   </body>
 </html>
