--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <form action=""> 
       <input type="email" name="email" class="input">
       <input type="text" name="name" class="input">
-      <input type="text" name="adress" class="input">
+      <input type="adress" name="adress" class="input">
       <input type="tel" name="phone" class="input">
       <input type="color" name="color" class="input">
       <input type="date" name="delivery_date" class="input">
